--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta 
+      http-equiv="Content-Security-Policy" 
+      content="default-src 'self' https://onecompiler.com;
+               script-src 'self';
+               style-src 'self' 'unsafe-inline';
+               img-src 'self' data: https://onecompiler.com;
+               connect-src 'self' https://onecompiler.com;
+               frame-src https://onecompiler.com;"
+    />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
